# ADABlobsPlutus

./: .gitignore  README.md  action.plutus  adablobs.cabal  cabal.project  datum.json  default.nix  plutus-starter.cabal  shell.nix  test.plutus
app/: Main.hs  plutus-auction.hs  plutus-test-basic.hs  plutus-test.hs
nix/: default.nix  sources.json
scripts/: auction.plutus  hash-datums.sh  hash-plutus.sh  query-protocol-parameters.sh  update-start-time.sh
scripts/accounts/: attacker.sh  buyer-1.sh  buyer.sh  diff-accounts.sh  log-all-accounts.sh  marketplace.sh  pair-wise-diffs.sh  royalties.sh  sc.sh  seller.sh
scripts/core/: bid-tx.sh  close-successfully-tx.sh  close-tx.sh  lock-tx.sh  outbid-tx.sh
scripts/failure-cases/: bid-not-high-enough.sh  bid-on-expired-auction.sh  close-too-early-tx.sh  close-wrong-payout-tx.sh  double-close-tx.sh  double-outbid-tx.sh  outbid-close-tx.sh  reserve-not-met-tx.sh
scripts/happy-path/: bid-1-tx.sh  bid-2-tx.sh  close-bid-1-expired-tx.sh  close-start-expired-tx.sh  close-tx.sh  lock-expired-tx.sh  lock-tx.sh  outbid-seller-bid-2-tx.sh  seller-bid-1-tx.sh
scripts/mainnet/: attacker-pkh.txt  auction.addr  test-policy-0.addr
scripts/mainnet/datums/0/: bid-1-hash.txt  bid-1.json  bid-2-hash.txt  bid-2.json  seller-bid-1-hash.txt  seller-bid-1.json  start-hash.txt  start.json
scripts/mainnet/datums/1/: bid-1-hash.txt  bid-1.json  bid-2-hash.txt  bid-2.json  seller-bid-1-hash.txt  seller-bid-1.json  start-hash.txt  start.json
scripts/mainnet/pkhs/: buyer-pkh.txt  buyer1-pkh.txt  marketplace-pkh.txt  royalities-pkh.txt  seller-pkh.txt
scripts/mainnet/redeemers/: bid-1.json  bid-2.json  seller-bid-1.json
scripts/minting/: mint-0-policy.sh  mint-test-policies.sh  test-mint-tx.sh
scripts/query/: all.sh  attacker.sh  buyer-1.sh  buyer.sh  marketplace.sh  royalty.sh  sc.sh  seller.sh
scripts/scratch/: burn-utxo.sh  buyer-to-buyer-1-utxo.sh
scripts/test-policies/: test-policy-0-id.txt  test-policy-0.plutus  test-policy-1-id.txt  test-policy-1.plutus  test-policy-2-id.txt  test-policy-2.plutus  test-policy-3-id.txt  test-policy-3.plutus
scripts/testnet/: attacker-pkh.txt  auction.addr  protocol-parameters.json  test-policy-0.addr
scripts/testnet/datums/0/: bid-1-hash.txt  bid-1.json  bid-2-hash.txt  bid-2.json  seller-bid-1-hash.txt  seller-bid-1.json  start-expired-hash.txt  start-expired.json  start-hash.txt  start.json
scripts/testnet/datums/1/: bid-1-hash.txt  bid-1.json  bid-2-hash.txt  bid-2.json  seller-bid-1-hash.txt  seller-bid-1.json  start-hash.txt  start.json
scripts/testnet/pkhs/: buyer-pkh.txt  buyer1-pkh.txt  marketplace-pkh.txt  royalities-pkh.txt  seller-pkh.txt
scripts/testnet/redeemers/: bid-1.json  bid-2.json  close.json  seller-bid-1.json
scripts/tests/: all.sh  start-bid1-bid2-close.sh  start-close-with-no-bids.sh  two-script-bid-bid.sh  two-script-txs-fail.sh
scripts/wait/: sc.sh  seller.sh  until-next-block.sh
scripts/wallets/: make-all-wallets-pkh.sh  make-all-wallets.sh  make-pkh.sh  make-wallet.sh
scripts/watch/: all.sh
src/: Auction.hs  BuySell.hs
src/Auction/: Auction.hs
src/Test/: Test.hs  TestBasicTransaction.hs  TestTransaction.hs
src/Trade/: Trade.hs
