cabal-version:      2.4
name:               adablobs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Auction
      Trade
      TestTransaction
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      cardano-api,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,   
      plutus-ledger-api,      
      plutus-chain-index,
      text,
      data-default,
      serialise,
    hs-source-dirs: src src/Auction src/Trade src/Test

executable plutus-auction
  import:         lang
  hs-source-dirs: app
  main-is:        plutus-auction.hs
  ghc-options:    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    cardano-api -any,
    cardano-ledger-alonzo -any,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    adablobs -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    plutus-ledger-api -any,
    openapi3 -any,
    serialise -any,

executable plutus-test
  import:         lang
  hs-source-dirs: app
  main-is:        plutus-test.hs
  ghc-options:    -threaded
  build-depends:
    base >= 4.9 && < 5,
    bytestring,
    cardano-api -any,
    cardano-ledger-alonzo -any,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    adablobs -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    plutus-ledger-api -any,
    openapi3 -any,
    serialise -any,